events/static/events/css/main.css
:root {
    --base: #171717;
    --base-secondary: #444444;
    --primary: #EDEDED;
    --accent: #DA0037;
    --success: rgb(39, 130, 101);
    --error: rgb(201, 49, 49);
    --debug: rgb(206, 103, 0);
    --info: rgb(0, 170, 170);
    --warning: rgb(153, 138, 0);
    --deactivated: rgb(136, 136, 136);
}

body {
    background-image: linear-gradient(to bottom right, var(--base), var(--base-secondary));
    color: var(--primary);
    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
}

main {
    min-height: 100vh;
    position: relative;
    top: 4rem;
}

/* Nav Bar */

.navbar {
    position: fixed;
    top: 0;
    z-index: 100;
    background-color: rgba(0, 0, 0, 0.5);
    height: 4rem;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 1rem;
}

.navbar li {
    display: inline-block;
    margin: 0 1.5rem;
    font-size: 0.8rem;
}

.navbar span {
    text-transform: uppercase;
    font-weight: 200;
    font-size: 0.8rem;
}

.navbar a {
    font-size: 0.8rem;
    text-decoration: none;
    color: var(--primary);
    transition: 0.3s;
}

.navbar a:visited {
    color: var(--primary);
}

.navbar a:hover {
    color: var(--accent);
    transition: 0.3s;
}

.navbar a:active {
    filter: brightness(50%);
    transition: 0.2s;
}

.center {
    text-align: center;
}

/* Alerts */
.alert {
    border-radius: 10px;
    margin: 0.25rem 0.5rem;
    margin-bottom: 0.5rem;
    padding: 1rem 2rem;
    font-weight: 200;
}

.alert-success {
    background-color: var(--success);
}

.alert-error {
    background-color: var(--error);
}

.alert-debug {
    background-color: var(--debug);
}

.alert-info {
    background-color: var(--info);
}

.alert-warning {
    background-color: var(--warning);
}

/* Default anchor styling */
a {
    color: lightblue;
    font-size: 0.8rem;
    transition: 0.3s;
}

a:visited {
    color: lightblue;
}

a:hover {
    color: var(--accent);
    transition: 0.3s;
}

a:active {
    filter: brightness(50%);
    transition: 0.2s;
}

/* Buttons */

.btn {
    cursor: pointer;
    margin-top: 2rem;
    background-color: rgba(0,0,0,0);
    border-width: 0;
    color: var(--primary);
    font-size: 1.25rem;
    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
    font-weight: 200;
    border: 1px solid var(--primary);
    border-radius: 5px;
    padding: 0.75rem;
    width: 10rem;
    transition: 0.3s;
    text-decoration: none;
}

.btn:visited {
    color: var(--primary);
}

.btn:hover {
    color: black;
    background-color: var(--primary);
    transition: 0.3s;
}

.btn:active {
    filter: brightness(50%);
    transition: 0.2s;
}

/* Info Button */
.btn-info {
    color: var(--info);
    border-color: var(--info);
}

.btn-info:hover {
    background-color: var(--info);
}

/* Deactivated Button */
.btn-deactivated {
    text-align: center;
    color: var(--deactivated);
    border-color: var(--deactivated);
    margin-top: 2rem;
    font-size: 1.25rem;
    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
    font-weight: 200;
    border: 1px solid var(--deactivated);
    border-radius: 5px;
    padding: 0.75rem;
    width: 12rem;
}

/* Small text */

.small {
    font-size: 0.85rem;
}

